Kubernetes/jmaze-k8s-cilium/media/bazarr/http_route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bazarr
spec:
  hostnames:
    - bazarr.media.jmaz.tv
  parentRefs:
    - name: default-gateway
      namespace: gateway
      sectionName: media # name of the gateway listener
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: bazarr
          port: 6767
          kind: Service
